# Scrap-villes-a-vivre

./: README.md  __main__.py  pyproject.toml  toto.csv  toto.xlsx
scrap-villes-a-vivre/: __main__.py
scrap_villes_a_vivre/: __init__.py  __main__.py  information_getter.py  page_request.py  parser_page.py  parsers.py  parsers_sections.py  reader_page.py
scripts/: format.sh  initiate.sh  linter.sh
