
[tool.poetry]
name = "scrap_villes_a_vivre"
authors = ["JeannotJeannot"]
description = "This is a web scrapper for the website villesavivre.fr."
version = "0.0.1"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"

# linters
ruff = "^0.4.9"
pylint = "^3.2.3"
black = "^24.4.2"
mypy = "^1.10.0"
vulture = "^2.11"
bandit = "^1.7.9"
types-beautifulsoup4 = "^4.12.0.20240511"
types-requests = "^2.32.0.20240602"


[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4
include = ["pyproject.toml", "scrap_villes_a_vivre/**/*.py"]

# Assume Python 3.8
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", #one-blank-line-before-class: delete useless blank line
    "D213", #multi-line-summary-second-line: do not return for first comment line
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

[tool.mypy]
packages = ["scrap_villes_a_vivre"]

[tool.black]
target-version = ['py312']
src = 'scrap_villes_a_vivre'